Change place for example of flying objects dataset

--- a/Projects/project1_RNN/Project - RNN.ipynb
+++ b/Projects/project1_RNN/Project - RNN.ipynb
@@ -13,18 +13,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This project will develop an **Recurrent neural network (RNN)**. The task is to predict the next image in a series.\n",
-    "\n",
-    "The task provide a dataset which creates a series of images where the last image in the series is the target. \n",
-    "\n",
-    "All **tasks** include **TODO's** thare are expected to be done before the deadline. The highlighted **Question's** should be answered in the report. Keep the answers separated so it is easy to read for the grading. Some sections include asserts or an expected result to give a and expected results are given. Some sections does not contain any **TODO's** but is good to understand them. \n",
-    "\n",
-    "For the **report** we have prepared an *Report.ipynb* notebook. The report should act as a summary of your findings and motivate your choice of approach. A better motivation show your understanding of the lab. Dont forget to include all **parts** in the report!\n",
-    "\n",
-    "This lab logs metrics to **Tensorboard**, for instructions to install check the introduction pdf.\n",
-    "\n",
-    "Good luck!\n",
-    "\n",
+    "This project will develop an **Recurrent neural network (RNN)**. The task is to predict the next image in a series.\r\n",
+    "\r\n",
+    "The task provide a dataset which creates a series of images where the last image in the series is the target. \r\n",
+    "\r\n",
+    "All **tasks** include **TODO's** thare are expected to be done before the deadline. The highlighted **Question's** should be answered in the report. Keep the answers separated so it is easy to read for the grading. Some sections include asserts or an expected result to give a and expected results are given. Some sections does not contain any **TODO's** but is good to understand them. \r\n",
+    "\r\n",
+    "For the **report** we have prepared an *Report.ipynb* notebook. The report should act as a summary of your findings and motivate your choice of approach. A better motivation show your understanding of the lab. Dont forget to include all **parts** in the report!\r\n",
+    "\r\n",
+    "This lab logs metrics to **Tensorboard**, for instructions to install check the introduction pdf.\r\n",
+    "\r\n",
+    "Good luck!\r\n",
+    "\r\n",
     "---"
    ],
    "metadata": {}
@@ -32,22 +32,22 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Task\n",
-    "\n",
-    "**TODO:** Implement **RNN** to predict the next image in the series. \n",
-    "\n",
-    "**TODO:** Select a good metric to evaluate the models performance and argue why the metric give a good overview of the performance.\n",
-    "\n",
-    "**Question:** Explain in the report what you did and why. Present a pipeline of the code. \n",
-    "\n",
-    "--- \n",
-    "\n",
-    "**Note:** The current image resolution is set to 32x32 (i.e. IMAGE_WIDTH and IMAGE_HEIGHT) in config.py. \n",
-    "This way initial experiements can run faster. Once you implement the inital version of the network, please set the resolution values back to 128x128. Experimental results should be provided for this high resolution images.  \n",
-    "\n",
-    "**Hint:** As a generator model, you can use the segmentation model implemented in lab03. Do not forget to adapt the input and output shapes of the generator model in this case.\n",
-    "\n",
-    "\n"
+    "# Task\r\n",
+    "\r\n",
+    "**TODO:** Implement **RNN** to predict the next image in the series. \r\n",
+    "\r\n",
+    "**TODO:** Select a good metric to evaluate the models performance and argue why the metric give a good overview of the performance.\r\n",
+    "\r\n",
+    "**Question:** Explain in the report what you did and why. Present a pipeline of the code. \r\n",
+    "\r\n",
+    "--- \r\n",
+    "\r\n",
+    "**Note:** The current image resolution is set to 32x32 (i.e. IMAGE_WIDTH and IMAGE_HEIGHT) in config.py. \r\n",
+    "This way initial experiements can run faster. Once you implement the inital version of the network, please set the resolution values back to 128x128. Experimental results should be provided for this high resolution images.  \r\n",
+    "\r\n",
+    "**Hint:** As a generator model, you can use the segmentation model implemented in lab03. Do not forget to adapt the input and output shapes of the generator model in this case.\r\n",
+    "\r\n",
+    "\r\n"
    ],
    "metadata": {}
   },
@@ -132,13 +132,21 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Dataset\n",
-    "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at [pytorch docs](https://pytorch.org/vision/stable/transforms.html)\n",
-    "\n",
-    "The dataset consist of a series of images where the last image in the series are the target image. All other images use the target image for the prediction. \n",
-    "\n",
-    "Note that ToTensor and Rezise are required to reshape and transform the images correct. We do not want to apply augmentation to the test_transform that are applied on the validation and test dataloader. For semantic segmentation we do not only have an input image $x$ but also an target label $y$. If we apply example: *RandomHorizontalFlip* the expected target image will be observed but will not be same rotation.\n",
-    "\n",
+    "# Dataset\r\n",
+    "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at [pytorch docs](https://pytorch.org/vision/stable/transforms.html)\r\n",
+    "\r\n",
+    "The Artificial Flying Objects Dataset consist of a series of images where the last image in the series are the target image. All other images use the target image for the prediction. \r\n",
+    "\r\n",
+    "The dataset with images moving through a sequence.\r\n",
+    "- 128x128x3 \r\n",
+    "- Around 30 frames in each sequence, \r\n",
+    "- In total 10K data for training, 2K for validation and 2K for testing\r\n",
+    "\r\n",
+    "![Example Gif](../../data/images/ArtificialFlyingObjects.gif)\r\n",
+    "\r\n",
+    "\r\n",
+    "Note that ToTensor and Rezise are required to reshape and transform the images correct. We do not want to apply augmentation to the test_transform that are applied on the validation and test dataloader. For semantic segmentation we do not only have an input image $x$ but also an target label $y$. If we apply example: *RandomHorizontalFlip* the expected target image will be observed but will not be same rotation.\r\n",
+    "\r\n",
     "**Hint:** To ensure that the CNN take the images as a sequence the images are concatenated along the channel dimension. The input shape will look like: $(batch\\_size*sequence\\_length, C, H, W)$. Also, test: $x.view(batch\\_size, sequence\\_length, -1)$ to process the images in a sequence after CNN."
    ],
    "metadata": {}
@@ -155,13 +163,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "train_transform = T.Compose([\n",
-    "    T.ToTensor(),\n",
-    "    T.Resize((cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),interpolation=torchvision.transforms.InterpolationMode.NEAREST), \n",
-    "])\n",
-    "test_transform = T.Compose([\n",
-    "    T.ToTensor(),\n",
-    "    T.Resize((cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),interpolation=torchvision.transforms.InterpolationMode.NEAREST), #, \n",
+    "train_transform = T.Compose([\r\n",
+    "    T.ToTensor(),\r\n",
+    "    T.Resize((cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),interpolation=torchvision.transforms.InterpolationMode.NEAREST), \r\n",
+    "])\r\n",
+    "test_transform = T.Compose([\r\n",
+    "    T.ToTensor(),\r\n",
+    "    T.Resize((cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),interpolation=torchvision.transforms.InterpolationMode.NEAREST), #, \r\n",
     "])"
    ],
    "outputs": [],
@@ -178,39 +186,39 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "train_dataloader = DataLoader(\n",
-    "    FutureFramePredictorDataset(\n",
-    "        cfg.training_img_dir, \n",
-    "        cfg.SEQUENCE_LENGTH,\n",
-    "        img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH), \n",
-    "        transforms=train_transform),\n",
-    "    batch_size=cfg.BATCH_SIZE,\n",
-    "    shuffle=True,\n",
-    "    num_workers=cfg.NUM_WORKERS\n",
-    "\n",
-    ")\n",
-    "\n",
-    "valid_dataloader = DataLoader(\n",
-    "    FutureFramePredictorDataset(\n",
-    "        cfg.validation_img_dir, \n",
-    "        cfg.SEQUENCE_LENGTH,\n",
-    "        img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH), \n",
-    "        transforms=test_transform),\n",
-    "    batch_size=cfg.BATCH_SIZE,\n",
-    "    shuffle=False,\n",
-    "    num_workers=cfg.NUM_WORKERS\n",
-    ")\n",
-    "test_dataloader = DataLoader(\n",
-    "    FutureFramePredictorDataset(\n",
-    "        cfg.testing_img_dir, \n",
-    "        cfg.SEQUENCE_LENGTH,\n",
-    "        img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH), \n",
-    "        transforms=test_transform),\n",
-    "    batch_size=cfg.BATCH_SIZE,\n",
-    "    shuffle=False,\n",
-    "    num_workers=cfg.NUM_WORKERS\n",
-    ")\n",
-    "\n",
+    "train_dataloader = DataLoader(\r\n",
+    "    FutureFramePredictorDataset(\r\n",
+    "        cfg.training_img_dir, \r\n",
+    "        cfg.SEQUENCE_LENGTH,\r\n",
+    "        img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH), \r\n",
+    "        transforms=train_transform),\r\n",
+    "    batch_size=cfg.BATCH_SIZE,\r\n",
+    "    shuffle=True,\r\n",
+    "    num_workers=cfg.NUM_WORKERS\r\n",
+    "\r\n",
+    ")\r\n",
+    "\r\n",
+    "valid_dataloader = DataLoader(\r\n",
+    "    FutureFramePredictorDataset(\r\n",
+    "        cfg.validation_img_dir, \r\n",
+    "        cfg.SEQUENCE_LENGTH,\r\n",
+    "        img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH), \r\n",
+    "        transforms=test_transform),\r\n",
+    "    batch_size=cfg.BATCH_SIZE,\r\n",
+    "    shuffle=False,\r\n",
+    "    num_workers=cfg.NUM_WORKERS\r\n",
+    ")\r\n",
+    "test_dataloader = DataLoader(\r\n",
+    "    FutureFramePredictorDataset(\r\n",
+    "        cfg.testing_img_dir, \r\n",
+    "        cfg.SEQUENCE_LENGTH,\r\n",
+    "        img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH), \r\n",
+    "        transforms=test_transform),\r\n",
+    "    batch_size=cfg.BATCH_SIZE,\r\n",
+    "    shuffle=False,\r\n",
+    "    num_workers=cfg.NUM_WORKERS\r\n",
+    ")\r\n",
+    "\r\n",
     "print(\"Data batch generators are created!\")"
    ],
    "outputs": [
