Removed old instruction, fixed requirement package

--- a/lab2_MLP_Classification/Exercise_0202 - Performance.ipynb
+++ b/lab2_MLP_Classification/Exercise_0202 - Performance.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "source": [
     "%load_ext autoreload\r\n",
     "%autoreload 2\r\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "source": [
     "import numpy as np\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -151,15 +151,15 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\n",
-    "    return DataLoader(\n",
-    "        TensorDataset(\n",
-    "            torch.from_numpy(x).float(), \n",
-    "            torch.from_numpy(y).unsqueeze(1).float()\n",
-    "        ),\n",
-    "        batch_size=batch_size,\n",
-    "        num_workers=num_workers,\n",
-    "        **kwargs\n",
+    "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\r\n",
+    "    return DataLoader(\r\n",
+    "        TensorDataset(\r\n",
+    "            torch.from_numpy(x).float(), \r\n",
+    "            torch.from_numpy(y).unsqueeze(1).float()\r\n",
+    "        ),\r\n",
+    "        batch_size=batch_size,\r\n",
+    "        num_workers=num_workers,\r\n",
+    "        **kwargs\r\n",
     "    )"
    ],
    "outputs": [],
