--- a/lab2_MLP_Classification/Exercise_0204 - Classification.ipynb
+++ b/lab2_MLP_Classification/Exercise_0204 - Classification.ipynb
@@ -43,21 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "%load_ext autoreload\r\n",
     "%autoreload 2\r\n",
     "\r\n",
     "# Hacky solution to access the global utils package\r\n",
     "import sys,os\r\n",
-    "sys.path.append(os.path.dirname(os.path.realpath('..')))"
+    "sys.path.append(os.path.dirname(os.path.realpath('')))"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "import numpy as np\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -256,9 +256,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL-Labs",
-   "language": "python",
-   "name": "dl-labs"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -271,6 +270,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
   }
  },
  "nbformat": 4,
