--- a/lab3_Classification/Classification.ipynb
+++ b/lab3_Classification/Classification.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "%load_ext autoreload\r\n",
     "%autoreload 2\r\n",
@@ -45,14 +45,23 @@
     "import sys,os\r\n",
     "sys.path.append(os.path.dirname(os.path.realpath('')))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "# Torch packages\r\n",
     "import torch\r\n",
@@ -63,7 +72,6 @@
     "from torch.utils.data import DataLoader\r\n",
     "from utils.progressbar import LitProgressBar\r\n",
     "from utils.dataset import ClassificationDataset\r\n",
-    "from utils import dataloader\r\n",
     "from utils.model import Model\r\n",
     "from config import LabConfig\r\n",
     "from collections import OrderedDict\r\n",
@@ -108,9 +116,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Example data\n",
-    "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at the [pytorch doc](https://pytorch.org/vision/stable/transforms.html)\n",
-    "\n",
+    "## Example data\r\n",
+    "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at the [pytorch doc](https://pytorch.org/vision/stable/transforms.html)\r\n",
+    "\r\n",
     "Note that ToTensor and Rezise are required to reshape and transform the images correct. We do not want to apply augmentation to the test_transform that are applied on the validation and test dataloader."
    ],
    "metadata": {}
@@ -149,20 +157,20 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "train_dataloader = DataLoader(ClassificationDataset(cfg.training_img_dir, cfg.CLASSES, img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),transform=train_transform),\n",
-    "                        batch_size=cfg.BATCH_SIZE,\n",
-    "                        shuffle=True,\n",
-    "                        num_workers=cfg.NUM_WORKERS)\n",
-    "valid_dataloader = DataLoader(ClassificationDataset(cfg.validation_img_dir, cfg.CLASSES, img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),transform=test_transform),\n",
-    "                        batch_size=cfg.BATCH_SIZE,\n",
-    "                        shuffle=False,\n",
-    "                        num_workers=cfg.NUM_WORKERS)\n",
-    "\n",
-    "test_dataloader = DataLoader(ClassificationDataset(cfg.testing_img_dir, cfg.CLASSES, img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),transform=test_transform),\n",
-    "                        batch_size=cfg.BATCH_SIZE,\n",
-    "                        shuffle=False,\n",
-    "                        num_workers=cfg.NUM_WORKERS)\n",
-    "\n",
+    "train_dataloader = DataLoader(ClassificationDataset(cfg.training_img_dir, cfg.CLASSES, img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),transform=train_transform),\r\n",
+    "                        batch_size=cfg.BATCH_SIZE,\r\n",
+    "                        shuffle=True,\r\n",
+    "                        num_workers=cfg.NUM_WORKERS)\r\n",
+    "valid_dataloader = DataLoader(ClassificationDataset(cfg.validation_img_dir, cfg.CLASSES, img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),transform=test_transform),\r\n",
+    "                        batch_size=cfg.BATCH_SIZE,\r\n",
+    "                        shuffle=False,\r\n",
+    "                        num_workers=cfg.NUM_WORKERS)\r\n",
+    "\r\n",
+    "test_dataloader = DataLoader(ClassificationDataset(cfg.testing_img_dir, cfg.CLASSES, img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),transform=test_transform),\r\n",
+    "                        batch_size=cfg.BATCH_SIZE,\r\n",
+    "                        shuffle=False,\r\n",
+    "                        num_workers=cfg.NUM_WORKERS)\r\n",
+    "\r\n",
     "print(\"Data batch generators are created!\")"
    ],
    "outputs": [],
@@ -180,9 +188,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "t_x, t_y = next(iter(train_dataloader))\n",
-    "print(f\"x {tuple(t_x.shape)} {t_x.dtype} {t_x.min()} {t_x.max()}\")\n",
-    "print(f\"y {tuple(t_y.shape)} {t_y.dtype} {t_y.min()} {t_y.max()}\")\n",
+    "t_x, t_y = next(iter(train_dataloader))\r\n",
+    "print(f\"x {tuple(t_x.shape)} {t_x.dtype} {t_x.min()} {t_x.max()}\")\r\n",
+    "print(f\"y {tuple(t_y.shape)} {t_y.dtype} {t_y.min()} {t_y.max()}\")\r\n",
     "plot.Classification.data(t_x, t_y, nimages=10,nrows=2)"
    ],
    "outputs": [],
@@ -426,9 +434,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL-Labs",
-   "language": "python",
-   "name": "dl-labs"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -442,7 +449,10 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
   },
-  "toc-autonumbering": true
+  "toc-autonumbering": true,
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
