--- a/Projects/project1_RNN/Project - RNN.ipynb
+++ b/Projects/project1_RNN/Project - RNN.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "%load_ext autoreload\r\n",
     "%autoreload 2\r\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "from config import LabConfig\r\n",
     "import torchmetrics\r\n",
@@ -81,8 +81,8 @@
     "import torchvision\r\n",
     "import torch\r\n",
     "from torch.utils.data import DataLoader\r\n",
-    "from DL_labs.utils.dataset import FutureFramePredictorDataset\r\n",
-    "from DL_labs.utils.plot import RNN"
+    "from utils.dataset import FutureFramePredictorDataset\r\n",
+    "from utils.plot import RNN"
    ],
    "outputs": [],
    "metadata": {}
@@ -307,9 +307,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL-Labs",
-   "language": "python",
-   "name": "dl-labs"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -322,6 +321,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
   }
  },
  "nbformat": 4,
