--- a/Projects/project2_GAN/Project - GAN.ipynb
+++ b/Projects/project2_GAN/Project - GAN.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "source": [
     "%load_ext autoreload\r\n",
     "%autoreload 2\r\n",
@@ -79,22 +79,27 @@
     "import sys,os\r\n",
     "sys.path.append(os.path.dirname(os.path.realpath('..')))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "source": [
     "from config import LabConfig\r\n",
     "import torchmetrics\r\n",
     "import transforms as T\r\n",
-    "import torchvision\r\n",
     "import torch\r\n",
-    "from torch.utils.data import DataLoader\r\n",
-    "from utils.dataset import LastFramePredictorDataset\r\n",
     "from utils.plot import GAN\r\n",
-    "from utils.utils import normalize\r\n",
     "import torchvision.datasets as dset\r\n",
     "import torchvision.transforms as transforms"
    ],
