--- a/lab1_Backpropagation/Exercise_0102 - PyTorch.ipynb
+++ b/lab1_Backpropagation/Exercise_0102 - PyTorch.ipynb
@@ -2,26 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
    "source": [
     "<center><h1 style=\"font-size:40px;\">Exercise I:<br> Backpropagation\n",
     "</h1></center>\n",
     "\n",
     "---"
-   ]
+   ],
+   "metadata": {
+    "toc-hr-collapsed": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Introduction"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Welcome to the second part of the first lab for Deep Learning!\n",
     "\n",
@@ -32,83 +31,92 @@
     "There is a file called config.py. This file contains most of the settings that is used during the lab. We wont use every setting at all time but the config help us to keep organised.\n",
     "\n",
     "---"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Lab 1"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The following code allows us to edit imported files without restarting the kernel for the notebook"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "# Hacky solution to access the global utils package\n",
-    "import sys,os\n",
-    "sys.path.append(os.path.dirname(os.path.realpath('..')))"
-   ]
+    "%load_ext autoreload\r\n",
+    "%autoreload 2\r\n",
+    "# Hacky solution to access the global utils package\r\n",
+    "import sys,os\r\n",
+    "sys.path.append(os.path.dirname(os.path.realpath('')))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
    "source": [
-    "# local modules\n",
-    "from config import LabConfig\n",
-    "from sklearn.datasets import load_digits\n",
-    "from sklearn import preprocessing\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Torch packages\n",
-    "import torch\n",
-    "import torchvision\n",
-    "import torch.nn as nn\n",
+    "# local modules\r\n",
+    "from config import LabConfig\r\n",
+    "from sklearn.datasets import load_digits\r\n",
+    "from sklearn import preprocessing\r\n",
+    "import numpy as np\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "import pandas as pd\r\n",
+    "\r\n",
+    "# Torch packages\r\n",
+    "import torch\r\n",
+    "import torchvision\r\n",
+    "import torch.nn as nn\r\n",
     "import torch.nn.functional as F"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Load config"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "cfg = LabConfig()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Define neural network"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "In order to create a neural network model we need to implement the following class which inherits nn.Module. \n",
     "\n",
@@ -117,42 +125,41 @@
     "If we assume that the trainer uses CrossEntropyLoss from pytorch we do not need to define an activation function before the output since CrossEntropyLoss combines nn.LogSoftmax() and nn.NLLLoss() according to the pytorch documentation.\n",
     "\n",
     "The input_size for this lab is the image size (cfg.IMAGE_WIDTH*cfg.IMAGE_HEIGHT) and the output size are the number of classes to predict."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Example 1\n",
-    "class Perceptron(nn.Module):\n",
-    "    def __init__(self,  input_size, output_size):\n",
-    "        super(Perceptron, self).__init__()\n",
-    "        self.fc = nn.Linear(input_size,output_size)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = x.view(x.size(0), -1) # Flatten\n",
-    "        output = self.fc(x)\n",
+    "# Example 1\r\n",
+    "class Perceptron(nn.Module):\r\n",
+    "    def __init__(self,  input_size, output_size):\r\n",
+    "        super(Perceptron, self).__init__()\r\n",
+    "        self.fc = nn.Linear(input_size,output_size)\r\n",
+    "        \r\n",
+    "    def forward(self, x):\r\n",
+    "        x = x.view(x.size(0), -1) # Flatten\r\n",
+    "        output = self.fc(x)\r\n",
     "        return output"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "An architecture with 1 or more hidden layers are known as a deep/multilayer feedforward model or multilayer perceptron model (MLP). \n",
     "\n",
     "## Task 1\n",
     "\n",
     "**TODO:** Implement the MLP architecture to have 1 or more hidden layers."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class MLP(nn.Module):\n",
     "    def __init__(self, input_size, output_size,hidden_size):\n",
@@ -162,23 +169,21 @@
     "    def forward(self, x):\n",
     "        # TODO\n",
     "        return output"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Load dataset\n",
     "For us to load the data we will use *torchvision* transforms which allow us to pipeline the preprocessing and augmentation steps. Furthermore torchvision allow us to import the MNIST dataset and create dataloaders for batching, shuffle and multithreading."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
    "source": [
     "transform = torchvision.transforms.Compose(\n",
     "    [torchvision.transforms.ToTensor(),\n",
@@ -203,44 +208,47 @@
     "                                         batch_size=100,\n",
     "                                         shuffle=False,\n",
     "                                         num_workers=2)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Plot a batch from dataset"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "In order to visualise the dataset we will use the function plot_grid_of_batch in order to plot the data of a batch. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sample_index = 40\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(torchvision.utils.make_grid(trainset.data[:sample_index].unsqueeze(1).float(), normalize=True).permute(1,2,0),cmap=plt.cm.gray_r,interpolation='nearest')\n",
     "plt.title(\"MNIST example data\");"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Learning framework"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "In this section we will learn to predict with the help of our network. The approach consist of two parts; a training and a validation step.\n",
     "\n",
@@ -253,29 +261,28 @@
     "Validation consist of 2 stages:\n",
     "1. Compute model's predictions (forward pass)\n",
     "2. Compute the loss, using predictions, labels and a appropriate loss function"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Task 2\n",
     "\n",
     "**TODO:** Implement the steps to run the trainer below"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Trainer"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def trainer(model, epochs):\n",
     "    loss_metric = []\n",
@@ -299,19 +306,20 @@
     "            print(f'[{epoch + 1}, {i+1:4}/{len(trainloader)}] loss: {loss.item():.4}', end='\\r')\n",
     "        loss_metric.append(loss.item()/len(trainloader))\n",
     "    return {'loss':loss_metric}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Configs\n",
     "For this lab we dont have a lot of configs and we keep it simple. We can define our model, number of hidden nodes, optimizer and number of epochs to run."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Task 3 \n",
     "**TODO:** Implement;\n",
@@ -331,13 +339,12 @@
     "1. How did the Feedforward network perform? \n",
     "2. How did the modified Feedforward network perform? \n",
     "3. Can we reduce number of nodes with an increased number of layers or vise verse, any changes?\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "HIDDEN_NODES = 2\n",
     "model = Perceptron(cfg.IMAGE_WIDTH*cfg.IMAGE_HEIGHT, cfg.NUM_CLASS)# TODO\n",
@@ -345,66 +352,66 @@
     "criterion = nn.CrossEntropyLoss()# TODO\n",
     "optimizer = torch.optim.Adam(model.parameters())#TODO\n",
     "epochs = 5"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Run the model\n",
     "metrics = trainer(model, epochs)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Lets check the loss over each epoch."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "plt.plot(metrics['loss'])\n",
     "plt.title(\"Training loss\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Testing"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Lets predict some data to see the performance of a few samples"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "dataiter = iter(testloader)\n",
     "images, labels = dataiter.next()\n",
     "outputs = model(images)\n",
     "_, predicted = torch.max(outputs, 1)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "n_test = 10\n",
     "df_result = pd.DataFrame({\n",
@@ -412,14 +419,15 @@
     "    'Predicted label': predicted[:n_test]})\n",
     "display(df_result.T)\n",
     "plt.imshow(torchvision.utils.make_grid(images[:n_test, :, :, :], nrow=n_test).permute(1,2,0))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL-Labs",
-   "language": "python",
-   "name": "dl-labs"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -436,7 +444,10 @@
   "toc-autonumbering": true,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false,
-  "toc-showtags": true
+  "toc-showtags": true,
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
