--- a/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
+++ b/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
@@ -65,21 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "%load_ext autoreload\r\n",
     "%autoreload 2\r\n",
     "\r\n",
     "# Hacky solution to access the global utils package\r\n",
     "import sys,os\r\n",
-    "sys.path.append(os.path.dirname(os.path.realpath('..')))"
+    "sys.path.append(os.path.dirname(os.path.realpath('')))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "import numpy as np\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -124,23 +133,23 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "class MLP(torch.nn.Module):\n",
-    "    def __init__(self, \n",
-    "                inp_dim=None,         \n",
-    "                hidden_nodes=1, # number of nodes in hidden layer\n",
-    "                num_out=None,\n",
-    "                **kwargs\n",
-    "            ):\n",
-    "        super(MLP, self).__init__()\n",
-    "        self.fc1 = torch.nn.Linear(inp_dim, hidden_nodes)\n",
-    "        self.relu = torch.nn.ReLU()\n",
-    "        self.fc2 = torch.nn.Linear(hidden_nodes, num_out)\n",
-    "\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        hidden = self.fc1(x)\n",
-    "        relu = self.relu(hidden)\n",
-    "        output = self.fc2(relu)\n",
+    "class MLP(torch.nn.Module):\r\n",
+    "    def __init__(self, \r\n",
+    "                inp_dim=None,         \r\n",
+    "                hidden_nodes=1, # number of nodes in hidden layer\r\n",
+    "                num_out=None,\r\n",
+    "                **kwargs\r\n",
+    "            ):\r\n",
+    "        super(MLP, self).__init__()\r\n",
+    "        self.fc1 = torch.nn.Linear(inp_dim, hidden_nodes)\r\n",
+    "        self.relu = torch.nn.ReLU()\r\n",
+    "        self.fc2 = torch.nn.Linear(hidden_nodes, num_out)\r\n",
+    "\r\n",
+    "\r\n",
+    "    def forward(self, x):\r\n",
+    "        hidden = self.fc1(x)\r\n",
+    "        relu = self.relu(hidden)\r\n",
+    "        output = self.fc2(relu)\r\n",
     "        return torch.sigmoid(output)"
    ],
    "outputs": [],
@@ -291,9 +300,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL-Labs",
-   "language": "python",
-   "name": "dl-labs"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -306,6 +314,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
   }
  },
  "nbformat": 4,
