--- a/lab4_Segmentation/Segmentation.ipynb
+++ b/lab4_Segmentation/Segmentation.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "%load_ext autoreload\r\n",
     "%autoreload 2\r\n",
@@ -45,12 +45,21 @@
     "import sys,os\r\n",
     "sys.path.append(os.path.dirname(os.path.realpath('')))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "# Torch packages\r\n",
     "import torch\r\n",
@@ -60,14 +69,11 @@
     "# local modules\r\n",
     "from torch.utils.data import DataLoader\r\n",
     "from utils.dataset import SegmentationDataset\r\n",
-    "from utils import dataloader\r\n",
     "from utils.model import Model\r\n",
     "from utils.progressbar import LitProgressBar\r\n",
     "from config import LabConfig\r\n",
-    "from collections import OrderedDict\r\n",
     "import torchvision\r\n",
-    "from utils import plot, utils\r\n",
-    "import pprint\r\n",
+    "from utils import plot\r\n",
     "import pytorch_lightning as pl\r\n",
     "\r\n",
     "import torchmetrics\r\n",
@@ -88,7 +94,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "cfg = LabConfig()\n",
+    "cfg = LabConfig()\r\n",
     "cfg.todict()"
    ],
    "outputs": [],
@@ -456,9 +462,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL-Labs",
-   "language": "python",
-   "name": "dl-labs"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -471,6 +476,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
   }
  },
  "nbformat": 4,
