--- a/lab2_MLP_Classification/Exercise_0204 - Classification.ipynb
+++ b/lab2_MLP_Classification/Exercise_0204 - Classification.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<center><h1 style=\"font-size:40px;\">Exercise II: Classification</h1></center>\n",
     "\n",
     "---"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "For this exercise you are given two classification problems with a fixed training-, validation- and test dataset. A spiral dataset and a japanese vowels dataset.\n",
     "\n",
@@ -24,117 +25,118 @@
     "\n",
     "## Spiral data\n",
     "This is the \"famous\" spiral dataset that consists of two 2-D spirals, one for each class. The perfect classification boundary is also a spiral. The cell \"PlotData\" will plot this dataset."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Code"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The following code allows us to edit imported files without restarting the kernel for the notebook"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "%load_ext autoreload\r\n",
-    "%autoreload 2\r\n",
-    "\r\n",
-    "# Hacky solution to access the global utils package\r\n",
-    "import sys,os\r\n",
-    "sys.path.append(os.path.dirname(os.path.realpath('')))"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Hacky solution to access the global utils package\n",
+    "import sys,os\n",
+    "sys.path.append(os.path.dirname(os.path.realpath('')))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "import numpy as np\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "import torch\r\n",
-    "import pytorch_lightning as pl\r\n",
-    "\r\n",
-    "from config import LabConfig\r\n",
-    "from dataset import MLPData\r\n",
-    "from utils.model import Model\r\n",
-    "from utils.progressbar import LitProgressBar\r\n",
-    "from utils.model import Model\r\n",
-    "from torch.utils.data import TensorDataset, DataLoader\r\n",
-    "import torchmetrics\r\n",
-    "from utils import (\r\n",
-    "    plot,\r\n",
-    "    progressbar\r\n",
-    ") "
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "from config import LabConfig\n",
+    "from dataset import MLPData\n",
+    "from utils.model import Model\n",
+    "from utils.progressbar import LitProgressBar\n",
+    "from utils.model import Model\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "import torchmetrics\n",
+    "from utils import (\n",
+    "    plot,\n",
+    "    progressbar\n",
+    ") "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cfg = LabConfig()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Task 1\n",
     "**TODO:** Present an MLP for the Japanese vowels dataset with associated hyperparameters that maximizes the validation performance and give the test performance you obtained. \\\n",
     "**TODO:** Motivate the choice of parameters and implementation. \n",
     "\n",
     "**Hint 2:** This problem is a 9-class classification problem, meaning that you should use a specific output activation function (*out_act_fun*) and a specific loss/error function (*cost_fun*)."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# Load dataset - Vowels\r\n",
-    "from DL_labs.utils.utils import onehot2int\r\n",
-    "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\r\n",
-    "    return DataLoader(\r\n",
-    "        TensorDataset(\r\n",
-    "            torch.from_numpy(x).float(), \r\n",
-    "            torch.from_numpy(np.argmax(y,axis=1)).long()\r\n",
-    "        ),\r\n",
-    "        batch_size=batch_size,\r\n",
-    "        num_workers=num_workers,\r\n",
-    "        **kwargs\r\n",
-    "    )\r\n",
-    "\r\n",
-    "x_train, y_train, x_val, y_val, x_test, y_test = MLPData.vowels(file_name_train=cfg.ae_train, file_name_test=cfg.ae_test)\r\n",
-    "\r\n",
-    "train_loader = numpy2Dataloader(x_train,y_train)\r\n",
-    "val_loader =  numpy2Dataloader(x_val,y_val)\r\n",
-    "test_loader =  numpy2Dataloader(x_test,y_test)\r\n",
-    "\r\n",
-    "num_classes = 9\r\n",
-    "print(f'|{\"Type\":10} | {\"Input size\":10} | {\"Target size\":10}|')\r\n",
-    "print(f'|{\"-\"*11}|{\"-\"*12}|{\"-\"*12}|')\r\n",
-    "print(f'|{\"train\":10} | {str(x_train.shape):10} | {str(y_train.shape):10} |')\r\n",
-    "print(f'|{\"val\":8}   | {str(x_val.shape):10} | {str(y_val.shape):10} |')\r\n",
-    "print(f'|{\"test\":9}  | {str(x_test.shape):10} | {str(y_test.shape):10} |')"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# Load dataset - Vowels\n",
+    "from DL_labs.utils.utils import onehot2int\n",
+    "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\n",
+    "    return DataLoader(\n",
+    "        TensorDataset(\n",
+    "            torch.from_numpy(x).float(), \n",
+    "            torch.from_numpy(np.argmax(y,axis=1)).long()\n",
+    "        ),\n",
+    "        batch_size=batch_size,\n",
+    "        num_workers=num_workers,\n",
+    "        **kwargs\n",
+    "    )\n",
+    "\n",
+    "x_train, y_train, x_val, y_val, x_test, y_test = MLPData.vowels(file_name_train=cfg.ae_train, file_name_test=cfg.ae_test)\n",
+    "\n",
+    "train_loader = numpy2Dataloader(x_train,y_train)\n",
+    "val_loader =  numpy2Dataloader(x_val,y_val)\n",
+    "test_loader =  numpy2Dataloader(x_test,y_test)\n",
+    "\n",
+    "num_classes = 9\n",
+    "print(f'|{\"Type\":10} | {\"Input size\":10} | {\"Target size\":10}|')\n",
+    "print(f'|{\"-\"*11}|{\"-\"*12}|{\"-\"*12}|')\n",
+    "print(f'|{\"train\":10} | {str(x_train.shape):10} | {str(y_train.shape):10} |')\n",
+    "print(f'|{\"val\":8}   | {str(x_val.shape):10} | {str(y_val.shape):10} |')\n",
+    "print(f'|{\"test\":9}  | {str(x_test.shape):10} | {str(y_test.shape):10} |')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# TODO - Create model \n",
     "\n",
@@ -143,12 +145,11 @@
     "# TODO - Run model\n",
     "\n",
     "# TODO - Validate performance"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Task 2\n",
     "For this last exercise the task is to train a binary classifier for the spiral problem. The aim is to get *zero* classification error for the training data (there is no test data) with as small as possible model, in terms of the number of trainable weights. Also plot the boundary to see if it resembles a spriral. To pass this question you should at least try!\n",
@@ -156,12 +157,13 @@
     "**TODO:** Train a classifier for the spiral problem with the aim of zero classification error with as small as possible model. \n",
     "\n",
     "**TODO:** Motivate the choice of parameters and implementation."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Load dataset\n",
     "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\n",
@@ -176,20 +178,20 @@
     "    )\n",
     "x_train, y_train = MLPData.spiral(cfg.spiral_path)\n",
     "train_loader = numpy2Dataloader(x_train,y_train)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Implement the TODO's"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# TODO - Create model \n",
     "\n",
@@ -198,47 +200,47 @@
     "# TODO - Run model\n",
     "\n",
     "# TODO - Validate performance"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Example of evaluation\n",
     "Run the testset and evaluate the performance of the model."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Move to correct device!\n",
     "trainer.test(model, test_dataloaders=test_loader)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "trainer.logged_metrics"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Confusion matrix "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "predictions = torch.argmax(torch.nn.functional.softmax(model(torch.from_numpy(x_train).float())),dim=1)\n",
     "target = torch.argmax(torch.from_numpy(y_train), axis=1)\n",
@@ -249,15 +251,17 @@
     "                      normalize = False,\n",
     "                      target_names = cfg.AE_CLASSES,\n",
     "                      title = \"Confusion Matrix: Test data\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -269,10 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  },
-  "interpreter": {
-   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
