--- a/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
+++ b/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<center><h1 style=\"font-size:40px;\">Exercise II: Regression</h1></center>\n",
     "\n",
     "---"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Now we are going to look at a regression problem. The data as described above (regr1) consists of 6 inputs (features) and one output (target) value. As for previous examples a new data set is generated each time you call the *regr1* function. To get exactly the same data set between different calls, use a fixed seed. New for this problem is that one can also control the amount of noise added to the target value. We are going to use a relatively small training dataset (\\~250) and a larger validation dataset (\\~1000) to get a more robust estimation of the generalization performance. For regression problems we also need new performance measures. The *stats_reg* function will give you two such measures:\n",
     "* MSE = mean squared error (low error mean good performance)\n",
@@ -46,125 +47,126 @@
     "\n",
     "## Task 4\n",
     "**TODO:** Summarize your findings in a few sentences.\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Code"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The following code allows us to edit imported files without restarting the kernel for the notebook"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "source": [
-    "%load_ext autoreload\r\n",
-    "%autoreload 2\r\n",
-    "\r\n",
-    "# Hacky solution to access the global utils package\r\n",
-    "import sys,os\r\n",
-    "sys.path.append(os.path.dirname(os.path.realpath('')))"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Hacky solution to access the global utils package\n",
+    "import sys,os\n",
+    "sys.path.append(os.path.dirname(os.path.realpath('')))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "source": [
-    "import numpy as np\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "import torch\r\n",
-    "import pytorch_lightning as pl\r\n",
-    "\r\n",
-    "from config import LabConfig\r\n",
-    "from dataset import MLPData\r\n",
-    "from utils.model import Model\r\n",
-    "from utils.progressbar import LitProgressBar\r\n",
-    "from utils.model import Model\r\n",
-    "from torch.utils.data import TensorDataset, DataLoader\r\n",
-    "from utils import (\r\n",
-    "    plot,\r\n",
-    "    progressbar\r\n",
-    ") "
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "from config import LabConfig\n",
+    "from dataset import MLPData\n",
+    "from utils.model import Model\n",
+    "from utils.progressbar import LitProgressBar\n",
+    "from utils.model import Model\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from utils import (\n",
+    "    plot,\n",
+    "    progressbar\n",
+    ") "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cfg = LabConfig()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Defining the MLP model\n",
     "\n",
     "This cell defines the MLP model. There are a number of parameters that is needed to \n",
     "define a model. Here is a list of them: **Note:** They can all be specified when you call\n",
     "this function in later cells. The ones specified in this cell are the default values.\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "class MLP(torch.nn.Module):\r\n",
-    "    def __init__(self, \r\n",
-    "                inp_dim=None,         \r\n",
-    "                hidden_nodes=1, # number of nodes in hidden layer\r\n",
-    "                num_out=None,\r\n",
-    "                **kwargs\r\n",
-    "            ):\r\n",
-    "        super(MLP, self).__init__()\r\n",
-    "        self.fc1 = torch.nn.Linear(inp_dim, hidden_nodes)\r\n",
-    "        self.relu = torch.nn.ReLU()\r\n",
-    "        self.fc2 = torch.nn.Linear(hidden_nodes, num_out)\r\n",
-    "\r\n",
-    "\r\n",
-    "    def forward(self, x):\r\n",
-    "        hidden = self.fc1(x)\r\n",
-    "        relu = self.relu(hidden)\r\n",
-    "        output = self.fc2(relu)\r\n",
-    "        return torch.sigmoid(output)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "class MLP(torch.nn.Module):\n",
+    "    def __init__(self, \n",
+    "                inp_dim=None,         \n",
+    "                hidden_nodes=1, # number of nodes in hidden layer\n",
+    "                num_out=None,\n",
+    "                **kwargs\n",
+    "            ):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = torch.nn.Linear(inp_dim, hidden_nodes)\n",
+    "        self.relu = torch.nn.ReLU()\n",
+    "        self.fc2 = torch.nn.Linear(hidden_nodes, num_out)\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        hidden = self.fc1(x)\n",
+    "        relu = self.relu(hidden)\n",
+    "        output = self.fc2(relu)\n",
+    "        return torch.sigmoid(output)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Define a function that allow us to convert numpy to pytorch DataLoader"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\n",
     "    return DataLoader(\n",
@@ -176,13 +178,13 @@
     "        num_workers=num_workers,\n",
     "        **kwargs\n",
     "    )"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Generate training and validation data\n",
     "x_train, d_train = MLPData.regr1(250, 0.0) # 250 data points with no noise\n",
@@ -198,21 +200,21 @@
     "\n",
     "train_loader = numpy2Dataloader(x_train,d_train)\n",
     "val_loader =  numpy2Dataloader(x_val,d_val)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Configuration\n",
     "Setup our local config that should be used for the trainer."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "config = {\n",
     "    'max_epochs':20,\n",
@@ -229,27 +231,27 @@
     "        }\n",
     "    }\n",
     "}"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Training"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Lastly, put everything together and call on the trainers fit method. "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model = Model(MLP(**config[\"model_params\"]),**config)\n",
     "\n",
@@ -267,41 +269,43 @@
     "    train_dataloader=train_loader,\n",
     "    val_dataloaders=val_loader\n",
     ");"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Evaluation"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "plot.stats_class(x_train, d_train, 'Training', model)\n",
     "plot.stats_class(x_val, d_val, 'Validation', model)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "d_train"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -313,10 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  },
-  "interpreter": {
-   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
